# CineReserve

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
frontend/: README.md  index.html  tailwind.config.js
frontend/src/: App.jsx  api.js  components.jsx
src/core/: celery.py  settings.py  urls.py
src/movies/: models.py  serializers.py  tests.py  urls.py  views.py
src/movies/management/commands/: seed_db.py
src/movies/migrations/: 0001_initial.py
src/tickets/: models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
src/tickets/migrations/: 0001_initial.py
src/users/: serializers.py  tests.py  urls.py  views.py
src/users/migrations/: 0001_initial.py
