[tool.poetry]
name = "cinereserve"
version = "0.1.0"
description = "CineReserve API for Cinépolis Natal"
authors = ["CineReserve Admin <admin@cinereserve.local>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
djangorestframework = "^3.15.1"
psycopg2-binary = "^2.9.9"
redis = "^5.0.3"
celery = "^5.3.6"
drf-spectacular = "^0.27.1"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"